--- a/style.css
+++ b/style.css
@@ -1,6 +1,42 @@
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    line-height: 1.5;
+
+}
+.herocontain {
+    display: flex;
+    flex-direction: column;
+}
+
+.herosecondheader {
+    display: flex;
+    justify-content: space-between;
+}
+
+.headerlink {
+    display: flex;
+    gap: 12px;
+    margin-right: 15px;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.submain {
+  display: flex;
+  flex-direction: column;
+ 
+}
+
 .headertitle {
     font-size: 24px;
     color: #f9faf8;
+    padding: 10px;
+    margin-left: 10px;
 }
 
 .heromain {
@@ -23,6 +59,7 @@ a {
 ul {
     list-style: none;
     text-decoration: none;
+    
 }
 
 
@@ -35,12 +72,20 @@ ul {
 
 .bodypics {
     text-align: center;
+
+}
+.picsep {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .infotext {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
+    display: flex;
+    justify-content: center;
 }
 .herocontain, .footer {
     background-color: #1f2937;
@@ -48,7 +93,7 @@ ul {
 }
 
 .action {
-    color: #3882f6;
+    color: #e5e7eb;
     background-color: #3882f6;
 
 }
