fix the header position, center pictures and add containers around quotes-footer

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 .herosecondheader {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .headerlink {
@@ -48,6 +49,12 @@ body {
     font-size: 18px;
     color: #e5e7eb;
 
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 a {
