--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
     display: flex;
     flex-direction: column;
     max-width: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
 }
 
 .herosecondheader {
@@ -29,11 +32,13 @@ body {
     justify-content: center;
     align-items: center;
 
+
 }
 
 .submain {
   display: flex;
   flex-direction: column;
+  padding-right: 20px;
  
 }
 
